crates/biome_js_parser/tests/js_test_suite/error/glimmer/glimmer_incomplete_less_than.gjs
// Test bare < at EOF
// Should handle EOF gracefully after less-than
const x = <
